--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2021"
 anyhow = "1.0.75"
 bytes = "1.4.0"
 hex = "0.4.3"
-tokio = { version = "1.32.0", features = ["full"] }
 
 foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", branch = "master" }
 ethers-providers = { git = "https://github.com/gakonst/ethers-rs.git" }
@@ -18,6 +17,8 @@ ethers-contract = { git = "https://github.com/gakonst/ethers-rs.git" }
 revm = { git = "https://github.com/bluealloy/revm/", rev = "6b55b9c0ab264c000e087c2f54f2d8dc24b869aa", features = ["ethersdb"] }
 eyre = "0.6.8"
 reqwest = { version = "0.11", default-features = false }
+dotenv = "0.15.0"
+tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "tracing"] }
 
 [patch.crates-io]
 revm = { git = "https://github.com/bluealloy/revm/", rev = "6b55b9c0ab264c000e087c2f54f2d8dc24b869aa" }
