Updated the README
Changed the main thread to finish if any of the tokio threads exit.

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@
 # does not support newPendingTransactions subscription
 WS_RPC_URL=wss://eth.llamarpc.com
 HTTP_RPC_URL=https://eth.llamarpc.com
+RETH_DB_PATH=/home/ubuntu/.local/share/reth/mainnet/db
